# ahoi-stat-app

./: .gitignore  .gitmodules  CMakeLists.txt  config.cmake  receiver-config.cmake  sender-config.cmake
cmake/: GitAddSubmodule.cmake
config/: log.conf
include/commons/: cli_helper.h  common.h  stat_service.h  utils.h
include/receiver/: receiver_stat_service.h
include/sender/: sender_stat_service.h
src/commons/: CMakeLists.txt  cli_helper.c  log_service.c  utils.c
src/receiver/: CMakeLists.txt  main.c  stat_service.c
src/sender/: CMakeLists.txt  main.c  stat_service.c
tests/: CMakeLists.txt  utils_test.c
